<resources>
    <string name="app_name">Serene</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="improvement_in">Improvement (in %)</string>
...
    </string>
    <string name="ForgetPassOK">Request New Password</string>
    <string name="ForgetPassCancle">Cancel</string>
    <string name="EmptyEmail">Email Should not be Empty</string>
    <string name="NotCorrectEmail">Please, Enter Your Email Correctly.</string>
    <string name="NoUser">* There is not User With this Email, Please Try Again!</string>
    <string name="SocioNotFound">You Have First Complete The Registration Requirements Before Log in</string>

    <!-- Suign up Page -->
    <string name="NotValidName">* Enter valid name.</string>
    <string name="NotValidEmail">* Enter valid email.</string>
    <string name="NotMatchPass">* Password does not match.</string>
    <string name="ExistUser">* Email already used by another account.</string>
...
    <!-- Socio in Sign up Page -->
    <string name="NotValidAge">Please Enter Valid Age Value Between 5 to 110 Years Old</string>
    <string name="NotValidHeight">Please Enter Valid Height Value Between 50 to 300 CM</string>
    <string name="NotValidWeight">Please Enter Valid Weight Value Between 20 to 300 KG</string>
    <string name="NotValidMI">Please Enter Valid Monthly Income Value should be no more than 5000000</string>
    <string name="NotValidCD">Only Letters Accepted in Chronic Disease</string>
    <string name="SocioSuccess">Success going to next</string>
    <string name="SocioFialed">There is Something Wrong, Please try again</string>

    <!-- GAD7 in Sign up Page -->
    <string name="GADSuccess">Success going to next</string>
    <string name="GADFialed">There is Something Wrong, Please try again</string>

...
